fix(grid): align CTA card with the feature grid layout

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @font-face {
   font-family: 'Switzer-Medium';
   src: url('./assets/fonts/Switzer-Medium.otf') format('woff2'),
-       url('./assets/fonts/Switzer-Medium.otf')  format('woff');
+    url('./assets/fonts/Switzer-Medium.otf') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -12,7 +12,7 @@
 @font-face {
   font-family: 'Switzer-Semibold';
   src: url('./assets/fonts/Switzer-Semibold.otf') format('woff2'),
-       url('./assets/fonts/Switzer-Semibold.otf')  format('woff');
+    url('./assets/fonts/Switzer-Semibold.otf') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -21,7 +21,7 @@
 @font-face {
   font-family: 'Switzer-Regular';
   src: url('./assets/fonts/Switzer-Regular.otf') format('woff2'),
-       url('./assets/fonts/Switzer-Regular.otf')  format('woff');
+    url('./assets/fonts/Switzer-Regular.otf') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -30,8 +30,8 @@
 @font-face {
   font-family: 'Bonny-Bold';
   src: url('./assets/fonts/Bonny-Bold.otf') format('woff2'),
-       url('./assets/fonts/Bonny-Bold.otf')  format('woff');
-  font-weight: 400;
+    url('./assets/fonts/Bonny-Bold.otf') format('woff');
+  font-weight: 100;
   font-style: normal;
   font-display: swap;
 }
